--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install: gem install bundler -v 1.10.5
 branches:
   only:
     - master
-bundler_args: --without production --deployment
+bundler_args: --without production
 cache:
   directories:
     - vendor/bundle
